<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="5"
    android:columnCount="4"
    android:orientation="horizontal">

    <EditText  android:layout_columnSpan="4"
        android:id="@+id/edt_text_data"
        android:textSize="@dimen/size"
        android:layout_width="match_parent"/>


    <Button
        android:text="@string/string_7"
        android:textSize="@dimen/size"
        android:id="@+id/btn_7"/>
    <Button
        android:text="@string/string_8"
        android:textSize="@dimen/size"
        android:id="@+id/btn_8"/>
    <Button
        android:text="@string/string_9"
        android:textSize="@dimen/size"
        android:id="@+id/btn_9"/>
    <Button
        android:text="@string/string_x"
        android:textSize="@dimen/size"
        android:id="@+id/btn_multi"/>

    <Button
        android:text="@string/string_4"
        android:textSize="@dimen/size"
        android:id="@+id/btn_4"/>
    <Button
        android:text="@string/string_5"
        android:textSize="@dimen/size"
        android:id="@+id/btn_5"/>
    <Button
        android:text="@string/string_6"
        android:textSize="@dimen/size"
        android:id="@+id/btn_6"/>
    <Button
        android:text="@string/string_men"
        android:textSize="@dimen/size"
        android:id="@+id/btn_rest"/>

    <Button
        android:text="@string/string_1"
        android:textSize="@dimen/size"
        android:id="@+id/btn_1"/>
    <Button
        android:text="@string/string_2"
        android:textSize="@dimen/size"
        android:id="@+id/btn_2"/>
    <Button
        android:text="@string/string_3"
        android:textSize="@dimen/size"
        android:id="@+id/btn_3"/>
    <Button
        android:text="@string/string_mas"
        android:textSize="@dimen/size"
        android:id="@+id/btn_plus"/>


    <Button
        android:text="@string/string_div"
        android:textSize="@dimen/size"
        android:id="@+id/btn_div"/>
    <Button
        android:text="@string/string_0"
        android:textSize="@dimen/size"
        android:id="@+id/btn_0"/>
    <Button
        android:text="@string/string_point"
        android:textSize="@dimen/size"
        android:id="@+id/btn_pun"/>
    <Button
        android:text="@string/string_result1"
        android:textSize="@dimen/size"
        android:id="@+id/btn_result"/>





</GridLayout>